[gd_scene load_steps=6 format=3 uid="uid://c8vy7c6bun1mg"]

[ext_resource type="Script" path="res://ItemManagement/ItemManagement.gd" id="1_ainkq"]
[ext_resource type="PackedScene" uid="uid://gew6rpa0i0nl" path="res://ItemManagement/ItemButton.tscn" id="1_mf5xk"]
[ext_resource type="PackedScene" uid="uid://voecyqrxfcqc" path="res://ItemManagement/StorageItem.tscn" id="2_jflef"]
[ext_resource type="FontFile" uid="uid://birjg2s70yadl" path="res://Resources/Fonts/NESCyrillic.ttf" id="4_t535t"]
[ext_resource type="AudioStream" uid="uid://c6mfwkyxn2bes" path="res://Resources/Music/05 Choose a File.mp3" id="5_itbok"]

[node name="ItemManagement" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ainkq")

[node name="ItemLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 168.0
offset_top = 40.0
offset_right = 280.0
offset_bottom = 66.0
theme_override_fonts/font = ExtResource("4_t535t")
theme_override_font_sizes/font_size = 24
text = "Inventory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StorageLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 736.0
offset_top = 40.0
offset_right = 848.0
offset_bottom = 66.0
theme_override_fonts/font = ExtResource("4_t535t")
theme_override_font_sizes/font_size = 24
text = "Storage"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InventoryContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.014
offset_left = 128.0
offset_top = 64.0
offset_right = 303.872
offset_bottom = 592.0

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemButton" parent="InventoryContainer/VBoxContainer" instance=ExtResource("1_mf5xk")]
layout_mode = 2

[node name="ItemButton2" parent="InventoryContainer/VBoxContainer" instance=ExtResource("1_mf5xk")]
layout_mode = 2

[node name="ItemButton3" parent="InventoryContainer/VBoxContainer" instance=ExtResource("1_mf5xk")]
layout_mode = 2

[node name="ItemButton4" parent="InventoryContainer/VBoxContainer" instance=ExtResource("1_mf5xk")]
layout_mode = 2

[node name="ItemButton5" parent="InventoryContainer/VBoxContainer" instance=ExtResource("1_mf5xk")]
layout_mode = 2

[node name="ItemButton6" parent="InventoryContainer/VBoxContainer" instance=ExtResource("1_mf5xk")]
layout_mode = 2

[node name="ItemButton7" parent="InventoryContainer/VBoxContainer" instance=ExtResource("1_mf5xk")]
layout_mode = 2

[node name="ItemButton8" parent="InventoryContainer/VBoxContainer" instance=ExtResource("1_mf5xk")]
layout_mode = 2

[node name="ItemButton9" parent="InventoryContainer/VBoxContainer" instance=ExtResource("1_mf5xk")]
layout_mode = 2

[node name="ItemButton10" parent="InventoryContainer/VBoxContainer" instance=ExtResource("1_mf5xk")]
layout_mode = 2

[node name="ItemButton11" parent="InventoryContainer/VBoxContainer" instance=ExtResource("1_mf5xk")]
layout_mode = 2

[node name="ItemButton12" parent="InventoryContainer/VBoxContainer" instance=ExtResource("1_mf5xk")]
layout_mode = 2

[node name="StorageContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.014
offset_left = 696.0
offset_top = 64.0
offset_right = 871.872
offset_bottom = 592.0

[node name="VBoxContainer" type="VBoxContainer" parent="StorageContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StorageItem" parent="StorageContainer/VBoxContainer" instance=ExtResource("2_jflef")]
layout_mode = 2

[node name="StorageItem2" parent="StorageContainer/VBoxContainer" instance=ExtResource("2_jflef")]
layout_mode = 2

[node name="StorageItem3" parent="StorageContainer/VBoxContainer" instance=ExtResource("2_jflef")]
layout_mode = 2

[node name="StorageItem4" parent="StorageContainer/VBoxContainer" instance=ExtResource("2_jflef")]
layout_mode = 2

[node name="StorageItem5" parent="StorageContainer/VBoxContainer" instance=ExtResource("2_jflef")]
layout_mode = 2

[node name="StorageItem6" parent="StorageContainer/VBoxContainer" instance=ExtResource("2_jflef")]
layout_mode = 2

[node name="StorageItem7" parent="StorageContainer/VBoxContainer" instance=ExtResource("2_jflef")]
layout_mode = 2

[node name="StorageItem8" parent="StorageContainer/VBoxContainer" instance=ExtResource("2_jflef")]
layout_mode = 2

[node name="StorageItem9" parent="StorageContainer/VBoxContainer" instance=ExtResource("2_jflef")]
layout_mode = 2

[node name="StorageItem10" parent="StorageContainer/VBoxContainer" instance=ExtResource("2_jflef")]
layout_mode = 2

[node name="StorageItem11" parent="StorageContainer/VBoxContainer" instance=ExtResource("2_jflef")]
layout_mode = 2

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 980.0
offset_top = 593.0
offset_right = 1137.0
offset_bottom = 627.0
theme_override_fonts/font = ExtResource("4_t535t")
text = "Back"

[node name="Capacity" type="Label" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 208.0
offset_right = 464.0
offset_bottom = 228.0
theme_override_fonts/font = ExtResource("4_t535t")
theme_override_font_sizes/font_size = 19
text = "Capacity = 12"

[node name="Current Amount" type="Label" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 192.0
offset_right = 464.0
offset_bottom = 212.0
theme_override_fonts/font = ExtResource("4_t535t")
theme_override_font_sizes/font_size = 19
text = "Size = "

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 336.0
offset_right = 576.0
offset_bottom = 584.0
theme_override_fonts/font = ExtResource("4_t535t")
theme_override_font_sizes/font_size = 19
text = "Size = "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Name2" type="Label" parent="."]
layout_mode = 0
offset_left = 1008.0
offset_top = 24.0
offset_right = 1136.0
offset_bottom = 112.0
theme_override_fonts/font = ExtResource("4_t535t")
theme_override_font_sizes/font_size = 19
text = "Left Click to inspect
Right Click to transfer"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_itbok")
autoplay = true

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
